--- a/package.json
+++ b/package.json
@@ -7,24 +7,38 @@
   "author": "pwxyz <839856946@qq.c0m>",
   "license": "MIT",
   "scripts": {
-    "build": "babel  src -d lib"
+    "start": "node server",
+    "dev":"nodemon server"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "test/*",
+      "apidoc/*",
+      "doc/*"
+    ]
   },
   "dependencies": {
-    "dayjs": "^1.8.15",
-    "koa": "^2.7.0",
+    
+    "dayjs": "^1.7.7",
+
+    "jsonwebtoken": "^8.3.0",
+    "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.1",
     "koa-cors": "^0.0.16",
-    "koa-jwt": "^3.6.0",
+    "koa-jwt": "^3.5.1",
     "koa-router": "^7.4.0",
-    "loadsh": "^0.0.4",
-    "mongoose": "^5.6.8"
+    "lodash": "^4.17.11",
+    "mongoose": "^5.2.14",
+    "path-to-regexp": "^2.4.0",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-transform-typescript": "^7.5.5",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.3.3"
+    "eslint": "^5.6.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
   }
 }
