--- a/package.json
+++ b/package.json
@@ -1,44 +1,47 @@
 {
-  "name": "server-api",
-  "version": "0.0.0.1",
-  "description": "mock api 的server",
+  "name": "mock-server",
+  "version": "0.0.1",
+  "description": "mock-server",
   "main": "index.js",
-  "repository": "https://github.com/pwxyz/server-mock.git",
-  "author": "pwxyz <839856946@qq.c0m>",
+  "author": "pwxyz",
   "license": "MIT",
   "scripts": {
-    "start": "node server",
-    "dev":"nodemon server"
+    "start": "node dist/src/index.js",
+    "dev": "nodemon --watch src --exec ts-node ./src/index.ts",
+    "test": "jest"
   },
   "nodemonConfig": {
     "ignore": [
-      "test/*",
-      "apidoc/*",
-      "doc/*"
+      "src/uploads/*"
     ]
   },
   "dependencies": {
-    
-    "dayjs": "^1.7.7",
-
-    "jsonwebtoken": "^8.3.0",
-    "koa": "^2.5.3",
-    "koa-bodyparser": "^4.2.1",
+    "@types/koa": "^2.0.48",
+    "@types/koa-router": "^7.0.39",
+    "@types/mongoose": "^5.3.20",
+    "babel-eslint": "^10.0.1",
+    "busboy": "^0.3.0",
+    "dotenv": "^6.2.0",
+    "jsonwebtoken": "^8.5.0",
+    "koa": "^2.7.0",
+    "koa-body": "^4.1.0",
     "koa-cors": "^0.0.16",
     "koa-jwt": "^3.5.1",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.2.14",
-    "path-to-regexp": "^2.4.0",
-    "winston": "^3.1.0"
+    "mockjs": "^1.0.1-beta3",
+    "mongoose": "^5.4.15",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "@types/jest": "^24.0.6",
+    "@types/redis": "^2.8.10",
+    "eslint": "^5.14.1",
+    "eslint-config-alloy": "^1.4.2",
+    "eslint-plugin-typescript": "^0.14.0",
+    "jest": "^24.1.0",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.3333",
+    "typescript-eslint-parser": "^22.0.0"
   }
 }
