--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
 
 
 DB_HOST = 'localhost'
-DB_NAME = 'mockserver'
+DB_NAME = 'serverapi'
+
+CRYPT_KEY = 'apiserver'
+
+TOKEN_KEY = 'this is token key'
+
+TOKEN_EXPIRES_IN = '7d'
 
 REDIS_HOST = '172.31.50.85'
 REDIS_PORT = 6379
@@ -10,4 +16,4 @@ REDIS_EXPIRE = 30
 LIMIT = 500
 
 
-PORT = 3366
+PORT = 3357
