--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/koa": "^2.0.48",
     "@types/koa-router": "^7.0.39",
     "@types/mongoose": "^5.3.20",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.1",
     "busboy": "^0.3.0",
     "dotenv": "^6.2.0",
