--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon --watch src --exec ts-node ./src/index.ts",
-    "build": "tsc src/*",
+    "build": "tsc",
     "test": "jest"
   },
   "nodemonConfig": {
@@ -17,6 +17,7 @@
     ]
   },
   "dependencies": {
+    "@koa/cors": "2",
     "@types/jsonwebtoken": "^8.3.3",
     "@types/koa": "^2.0.48",
     "@types/koa-router": "^7.0.39",
