--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^6.1.0",
     "eslint-config-alloy": "^1.4.2",
     "eslint-plugin-typescript": "^0.14.0",
+    "eslint-utils": "^1.4.2",
     "jest": "^24.9.0",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.3333",
