--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "lodash": "^4.17.15",
     "mockjs": "^1.0.1-beta3",
     "mongoose": "^5.4.15",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "set-value": "^3.0.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
