--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.1",
     "busboy": "^0.3.0",
+    "chinese-s2t": "^1.0.0",
     "dotenv": "^6.2.0",
     "jsonwebtoken": "^8.5.0",
     "koa": "^2.7.0",
