增加 web url env; 增加mock+projectid直接跳转到对应的url页面

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@
 DB_HOST = '172.31.50.41'
 DB_NAME = 'serverapi'
 
+WEB_URL = '172.31.50.41:5566'
+
 CRYPT_KEY = 'apiserver'
 
 TOKEN_KEY = 'this is token key'
