--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "babel-eslint": "^10.0.1",
     "busboy": "^0.3.0",
     "chinese-s2t": "^1.0.0",
+    "dayjs": "^1.8.28",
     "dotenv": "^6.2.0",
+    "fs-extra": "^9.0.1",
     "jsonwebtoken": "^8.5.0",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
@@ -36,6 +38,7 @@
     "lodash": "^4.17.15",
     "mockjs": "^1.0.1-beta3",
     "mongoose": "^5.4.15",
+    "officegen": "^0.6.4",
     "qs": "^6.8.0",
     "redis": "^2.8.0",
     "set-value": "^3.0.1",
