--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "koa-cors": "^0.0.16",
     "koa-jwt": "^3.5.1",
     "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0",
+    "koa-static": "^5.0.0",
     "lodash": "^4.17.15",
     "mockjs": "^1.0.1-beta3",
     "mongoose": "^5.4.15",
