--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash": "^4.17.15",
     "mockjs": "^1.0.1-beta3",
     "mongoose": "^5.4.15",
+    "node-schedule": "^1.3.2",
     "officegen": "^0.6.4",
     "qs": "^6.8.0",
     "redis": "^2.8.0",
